# dispersal-simulation

./: .gitignore  LICENSE.md  README.md  Simulation.bib  markdown.lua  model_description.tex  niches.tex
gavin2017processbased/: LibLPMMain.pas  geo_plot.py  grid.py  language.py  model.py  popcaps.py  rspb20190242supp4.txt
nongeographic/: extract_data_from_glottolog.py
population-and-territory-dynamics/: crema2014simulation.py  drennan2004comparing.py  geo_plot.py  hamilton2018stochastic.py  humanizing_crema.py  model.py
supplement/: .gitignore  KellyTables.ods  setup.py  warfaremodel.py
supplement/delcastillo2013modeling/: delcastillo2013modelling.py
supplement/dispersal_model/: __main__.py  c_util.pyx  dispersal.py  hexgrid.py  osm.py  plot_log.py  similar_culture_benchmark.py  types_and_units.py  util.py
supplement/dispersal_model_rust/: Cargo.toml  plot.py  plot_simple.py
supplement/dispersal_model_rust/minimal_metabolic_cost_surface/: Cargo.toml
supplement/dispersal_model_rust/minimal_metabolic_cost_surface/src/: lib.rs
supplement/dispersal_model_rust/src/: README.md  argparse.rs  cli.rs  debug.rs  ecology.rs  hexgrid.rs  lib.rs  main.rs  movementgraph.rs  parameters.rs  resume.rs  serialize_graph.rs  simple.rs  tests.rs  util.rs
supplement/dispersal_model_rust/src/ecology/: array_serde.rs
supplement/distances/: __main__.py  by_river.py  by_sea.py  centralities.py  check_areas.py  combine.py  database.py  distance_tiles.py  distances.py  earth.py  ecoregions.py  h3_helpers.py  main.py  noneuclidean_voronoi_tesselation_distances.py  plot.py  raster_data.py  reduce.py  route.py  short_distance_route.py  stats.py  stitch.py
supplement/ecoregions/: rasterize.sh
supplement/gavin2017processbased/: model.py
supplement/model/: binford2001constructing.py  dispersal.py  hexgrid.py  language.py  osm.py  plot_log.py  popcaps.py  util.py
supplement/plotting/: analyse.py  generate_more.py  interpret_data.py  osm.py  plot.py
supplement/population-and-territory-dynamics/: crema2014simulation.py  delcastillo2013modeling.py  main.py
supplement/tallavaara/: Tallavaara_Data_analyses.Rmd  Tallavaara_Dataset_4.xls  ecoregion_mean_log_pop_density.csv
