[package]
name = "dispersal_model_rust"
version = "0.1.0"
authors = ["Gereon A. Kaiping <gkaiping@geo.uzh.ch>"]
edition = "2018"
debug = 1

[profile.release]
debug = false
lto = true
codegen-units = 1
panic = "abort"

[lib]
name = "model"

[[bin]]
name = "simulation"
path = "src/main.rs"

[[bin]]
name = "resume"
path = "src/resume.rs"

[dependencies]
rustc-hash = ">=0.0.0"
rand = ">=0.8.0"
rand_distr = ">=0.0.0"
rayon = ">=0.0.0"
libh3 = ">=0.0.0"
tiff = ">=0.6.0"
argparse = ">=0.0.0"
lazy_static = ">=0.0.0"
petgraph = { version = ">=0.0.0", features = ["serde-1"] }
serde = { version = ">=0.0.0", features = ["serde_derive"] }
serde_derive = ">=0.0.0"
serde_json = ">=0.0.0"
bincode = ">=0.0.0"
rusqlite = ">=0.0.0"
dashmap = { version = ">=3.0.0", features = ["serde"] }
