[package]
name = "minimal_metabolic_cost_surface"
version = "0.1.0"
authors = ["Gereon Kaiping <gereon.kaiping@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libh3 = ">=0.0.0"
petgraph = ">=0.0.0"
approx = ">=0.0.0"
tiff = ">=0.0.0"